https://github.com/Misha050/____.git

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
             android:exported="true">
         </activity>
 
+        <!-- HistoryPage -->
+        <activity
+            android:name=".HistoryPage"
+            android:exported="true">
+        </activity>
+
     </application>
 
 </manifest>
